--- a/index.html
+++ b/index.html
@@ -1,43 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" >
-
-<head>
+ <head>
   <meta charset="UTF-8">
   <title>Responsive Fullscreen Google Map</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-
-  <html>
-
-<head>
+  <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-</head>
-
-<body onload="initializeMap()">
-    <div class="container">
-      <div>
-        <div id="map-canvas"></div>
-      </div>
+ </head>
+ <body>
+  <div class="container">
+   <div>
+    <div id="map-canvas"></div>
     </div>
-</body>
-
-</html>
-  
-  
-
-    <script  src="js/index.js"></script>
-
-
-
-
-</body>
-
+   </div>
+  </body>
+  <script src="js/index.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD414J2cxe7WzQ4_N7sv3PBDXdgo-3BbJA&callback=initMap"></script>
 </html>
